[tool.poetry]
name = "spendvest-backend-py"
version = "0.1.0"
description = "Mpesa payment integration for twilio and whatsapp"
authors = ["web3clubs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
twilio = "^9.1.0"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
